merge user_accounts_and_server branch with master